--- a/web/manage/index.html
+++ b/web/manage/index.html
@@ -41,29 +41,20 @@
                             style="vertical-align: middle;">Add New</a>
                     </h3>
                 </div>
-                <div class="table-wrapper">
-                    <table>
-                        <thead>
-                            <tr>
-                                <th>Source Name</th>
-                                <th>Total Photos</th>
-                                <th>Last Scanned</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>NAS</td>
-                                <td>31765</td>
-                                <td>2025-02-27 22:55:31</td>
-                            </tr>
-                            <tr>
-                                <td>FS</td>
-                                <td>12</td>
-                                <td>2025-02-15 07:55:31</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
+                <table>
+                    <thead>
+                        <tr>                                
+                            <th>Source Name</th>
+                            <th>Total Photos</th>
+                            <th>Last Scanned</th>
+                        </tr>
+                    </thead>
+                    <tbody id="source-summary-table-body">
+                    </tbody>
+                    <ul id="pagination" class="pagination">
+
+                    </ul>
+                </table>
 
                 <dialog id="dialog">
                     <section>
