--- a/web/manage/player.html
+++ b/web/manage/player.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Eyedeea Photos</title>
+    <title>Eyedeea Photos - Player</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
@@ -43,13 +43,13 @@
                 </div>
                 <table>
                     <thead>
-                        <tr>
-                            <th>Source Name</th>
+                        <tr>                            
+                            <th>Name</th>
+                            <th>Keywords</th>
                             <th>Total Photos</th>
-                            <th>Last Scanned</th>
                         </tr>
                     </thead>
-                    <tbody id="source-summary-table-body">
+                    <tbody id="player-filter-table-body">
                     </tbody>
                     <ul id="pagination" class="pagination">
 
