--- a/web/manage/source.html
+++ b/web/manage/source.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Eyedeea Photos</title>
+    <title>Eyedeea Photos - Sources</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
@@ -165,26 +165,15 @@
                     </header>
                     <ul>
                         <li><a href="index.html">Home</a></li>
+                        <li><a href="player.html">Player</a></li>
                         <li>
                             <span id="nav_sources_ctr" class="opener active">Sources</span>
                             <ul id="nav_sources">
                                 <!-- Dynamically filled-->
                             </ul>
                         </li>
-                        <li><a href="generic.html">Scans</a></li>
                     </ul>
                 </nav>
-
-                <!-- Section -->
-                <section>
-                    <header class="major">
-                        <h2>Get in touch</h2>
-                    </header>
-                    <ul class="contact">
-                        <li class="icon solid fa-envelope"><a href="#">support@eyediatech.com</a></li>
-                    </ul>
-                </section>
-
                 <!-- Footer -->
                 <footer id="footer">
                     <p class="copyright">&copy; Eyedia Technologies. All rights reserved.</p>
