--- a/web/index.html
+++ b/web/index.html
@@ -25,6 +25,11 @@
 			<img src="/images/Eyedeea_Photos_m_logo.png" title="Eyedeea Photos" width="50">
 			<h2>Eyedeea Photos</h2>
 			<h3>Rediscover the Moments You Forgot.</h3>
+			<section>
+				<hr>				
+				<a href="/manage" >Manage</a>
+			</section>
+			
 		</header>
 
 		<!-- Thumbnail -->
@@ -118,7 +123,7 @@
 		<!-- Footer -->
 		<footer id="footer">
 			<ul class="copyright">
-				<li>&copy; <a href="https://www.eyediatech.com/">Eyedia Tech</a></li>
+				<li>&copy; <a href="https://eyedeeaphotos.eyediatech.com/" target="_blank">Eyedia Tech</a></li>
 			</ul>
 		</footer>
 
