system search partial

--- a/web/manage/index.html
+++ b/web/manage/index.html
@@ -23,10 +23,10 @@
                         <a href="index.html" class="logo">
                             <img src="../images/Eyedeea_Photos_m_logo.png" width="10%" alt="Eyedeea Photos Logo"
                                 style="vertical-align: middle;" />
-                            <h1 style="display: inline;vertical-align: middle;">Eyedeea Photos</h1>
+                            <h2 style="display: inline;vertical-align: middle;">Eyedeea Photos - Settings</h2>
                         </a>
                     </div>
-                    <ul class="icons">
+                    <ul class="icons" style="width:30%;">
                         <li><a href="https://github.com/eyedia/EyedeeaPhotos" target="_blank"
                                 class="icon brands fa fa-github"><span class="label">Git Hub</span></a></li>
                         <li><a href="https://eyedeeaphotos.eyediatech.com/" target="_blank"
@@ -38,7 +38,7 @@
                 <div class="col-12">
                     <h3 id="system_summary"></h3>
                     <a href="#" onclick="window.dialog.showModal();" class="button primary icon"
-                        style="vertical-align: middle;">Add New</a>
+                        style="vertical-align: middle;">Add New Source</a>
 
                 </div>
                 <table>
@@ -120,7 +120,7 @@
                 <!-- Menu -->
                 <nav id="menu">
                     <header class="major">
-                        <h2>Eyedeea Photos</h2>
+                        <h2>Eyedeea Photos - Settings</h2>
                     </header>
                     <ul>
                         <li><a href="index.html">Home</a></li>
