--- a/web/manage/source.html
+++ b/web/manage/source.html
@@ -23,7 +23,7 @@
                         <a href="index.html" class="logo">
                             <img src="../images/Eyedeea_Photos_m_logo.png" width="10%" alt="Eyedeea Photos Logo"
                                 style="vertical-align: middle;" />
-                            <h1 style="display: inline;vertical-align: middle;">Eyedeea Photos</h1>
+                            <h2 style="display: inline;vertical-align: middle;">Eyedeea Photos - Source Settings</h2>
                         </a>
                     </div>
                     <ul class="icons">
@@ -161,7 +161,7 @@
                 <!-- Menu -->
                 <nav id="menu">
                     <header class="major">
-                        <h2>Eyedeea Photos</h2>
+                        <h2>Eyedeea Photos - Settings</h2>
                     </header>
                     <ul>
                         <li><a href="index.html">Home</a></li>
