--- a/web/manage/player.html
+++ b/web/manage/player.html
@@ -60,7 +60,7 @@
 
         .thumbnail {
             width: 100px;
-            height: 100px;
+            height: 56px;
             object-fit: cover;
         }
         #thumbnail-container {
@@ -69,7 +69,7 @@
         }
         img {
             width: 100px;
-            height: 100px;
+            height: 56px;
             margin: 5px;
         }
     </style>
@@ -130,7 +130,7 @@
                         <div class="header">
                             <input type="text" id="searchInput" class="search-box" placeholder="Search images...">
                             <div id="thumbnail-container"></div>
-                            <button id="load-more" data-page="1">Load More</button>
+                            <button id="load-more" data-offset="0">Load More</button>
                             <button onclick="closeModal()" class="close-btn">X</button>
                         </div>
                         <div id="gallery" class="gallery"></div>
@@ -185,16 +185,15 @@
     <script src="assets/js/manage_main.js"></script>
     <script src="assets/js/eyedeea_manage.js"></script>
     <script>
-        let page = 1, totalResults = 0, loadedResults = 0;
+        let limit = 30, offset = 0;
         let loading = false;
 
         function openModal() { document.getElementById('searchModal').style.display = 'flex'; }
         function closeModal() { document.getElementById('searchModal').style.display = 'none'; }
 
         document.getElementById('searchInput').addEventListener('keypress', function (event) {
-            if (event.key === 'Enter') {
-                console.log("xx")
-                page = 1;
+            if (event.key === 'Enter') {                
+                offset = 0;
                 document.getElementById('gallery').innerHTML = '';
                 fetchImages();
             }
@@ -203,16 +202,16 @@
         async function fetchImages() {
             if (loading) return;
             loading = true;
-            let query = document.getElementById('searchInput').value;
-            async function fetchThumbnails(pageNumber = 1, limit = 10) {
+            let keywords = document.getElementById('searchInput').value;
+            async function fetchThumbnails(offset) {
                 try {
-                    let response = await fetch(`/api/system/search?keywords=${query}&page=${page}`);
+                    let response = await fetch(`/api/system/search?keywords=${keywords}&limit=${limit}&offset=${offset}`);
                     let data = await response.json();
                     const container = document.getElementById("thumbnail-container");
                     container.innerHTML = ""; // Clear previous images
 
                     data.forEach(item => {
-                        console.log(item["photo-data"]);
+                        const photo_meta_data = JSON.parse(item["photo-meta-data"]);                        
                         if (item["photo-data"] && item["photo-data"].data) {
                             const bufferArray = new Uint8Array(item["photo-data"].data);
                             const blob = new Blob([bufferArray], { type: "image/jpeg" });
@@ -220,7 +219,7 @@
 
                             const img = document.createElement("img");
                             img.src = imageUrl;
-                            //console.log(imageUrl)
+                            img.title = photo_meta_data.cache_key;
                             img.alt = "Thumbnail";
 
                             container.appendChild(img);
@@ -231,15 +230,15 @@
                 }
             }
 
-            // Initial call to load the first page
-            fetchThumbnails(1);
+            // Initial call to load the first offset
+            fetchThumbnails(0);
 
             // Load more button functionality
             document.getElementById("load-more").addEventListener("click", () => {
-                let currentPage = Number(document.getElementById("load-more").getAttribute("data-page")) || 1;
-                currentPage++;
-                document.getElementById("load-more").setAttribute("data-page", currentPage);
-                fetchThumbnails(currentPage);
+                let offset = Number(document.getElementById("load-more").getAttribute("data-offset")) || 0;
+                offset = offset + limit + 1;
+                document.getElementById("load-more").setAttribute("data-offset", offset);
+                fetchThumbnails(offset);
             });
         }
     </script>
