--- a/web/manage/player.html
+++ b/web/manage/player.html
@@ -62,9 +62,9 @@
                 <button id="openModal">Open Gallery</button>
                 <div id="modal" class="modal">
                     <div class="modal-content">
-                        <span id="closeModal" class="close">&times;</span>
+                        <span id="closeModal" class="close" title="Escape key works too!">&times;</span>
                         <div class="search-bar">
-                            <input type="text" id="searchBox" placeholder="Search images...">
+                            <input type="text" id="searchBox" autofocus placeholder="Search images...">
                             <button id="searchButton">Search</button>
                             <input type="text" id="nameBox" placeholder="Name your filter...">    
                             <button id="saveButton">Save</button>
