--- a/web/manage/player.html
+++ b/web/manage/player.html
@@ -41,8 +41,9 @@
                     <h3 id="system_summary"></h3>
                     <a onclick="openModal()" class="button primary icon"
                         style="vertical-align: middle;">Add New Filter</a>
+                    <div id="notification" class="notification-container">This is a notification message!</div>
 
-                </div>
+                </div>                
                 <table>
                     <thead>
                         <tr>
