--- a/web/manage/index.html
+++ b/web/manage/index.html
@@ -23,7 +23,7 @@
                         <a href="index.html" class="logo">
                             <img src="../images/Eyedeea_Photos_m_logo.png" width="10%" alt="Eyedeea Photos Logo"
                                 style="vertical-align: middle;" />
-                            <h2 style="display: inline;vertical-align: middle;">Eyedeea Photos - Settings</h2>
+                            <h2 style="display: inline;vertical-align: middle;">Eyedeea Photos - System</h2>
                         </a>
                     </div>
                     <ul class="icons" style="width:30%;">
@@ -120,17 +120,19 @@
                 <!-- Menu -->
                 <nav id="menu">
                     <header class="major">
-                        <h2>Eyedeea Photos - Settings</h2>
+                        <h2><a href="../">Eyedeea Photos</a></h2>
                     </header>
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="player.html">Player</a></li>
+                    <ul>                        
+                        <li><a href="index.html">System</a></li>
+                        <li><a href="player.html">Player Settings</a></li>
+                        <li><a href="search.html">Search</a></li>
                         <li>
                             <span id="nav_sources_ctr" class="opener active">Sources</span>
                             <ul id="nav_sources">
                                 <!-- Dynamically filled-->
                             </ul>
                         </li>
+                        <li><a href="../">Back</a></li>
                     </ul>
                 </nav>
                 <!-- Footer -->
