--- a/web/manage/source.html
+++ b/web/manage/source.html
@@ -161,17 +161,19 @@
                 <!-- Menu -->
                 <nav id="menu">
                     <header class="major">
-                        <h2>Eyedeea Photos - Settings</h2>
+                        <h2><a href="../">Eyedeea Photos</a></h2>
                     </header>
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="player.html">Player</a></li>
+                    <ul>                        
+                        <li><a href="index.html">System</a></li>
+                        <li><a href="player.html">Player Settings</a></li>
+                        <li><a href="search.html">Search</a></li>
                         <li>
                             <span id="nav_sources_ctr" class="opener active">Sources</span>
                             <ul id="nav_sources">
                                 <!-- Dynamically filled-->
                             </ul>
                         </li>
+                        <li><a href="../">Back</a></li>
                     </ul>
                 </nav>
                 <!-- Footer -->
